WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52776
REGRESSION (
r71566
) Using the "POP DIRECTIONAL FORMATTING" character (‬) in RTL blocks messes up text directionality
https://bugs.webkit.org/show_bug.cgi?id=52776
Summary
REGRESSION (r71566) Using the "POP DIRECTIONAL FORMATTING" character (‬...
Xiaomei Ji
Reported
2011-01-19 18:14:26 PST
open the attached test file and observe the rendering result. related chromium bug:
http://code.google.com/p/chromium/issues/detail?id=70081
Attachments
test case
(738 bytes, text/html)
2011-01-19 18:15 PST
,
Xiaomei Ji
no flags
Details
patch w/ layout test
(90.91 KB, patch)
2011-01-20 17:23 PST
,
Xiaomei Ji
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xiaomei Ji
Comment 1
2011-01-19 18:15:15 PST
Created
attachment 79531
[details]
test case
Xiaomei Ji
Comment 2
2011-01-20 17:23:58 PST
Created
attachment 79671
[details]
patch w/ layout test
mitz
Comment 3
2011-01-20 17:45:39 PST
Comment on
attachment 79671
[details]
patch w/ layout test The code change seems good, but BidiResolver is not DOM-related, so it is strange that the test goes into fast/dom. Is there a way to test this without going through complicated editing operations. If the bug affects ordering of characters, it should be testable using Range.getClientRects() and comparing results. This would also allow the test to dump as text.
Xiaomei Ji
Comment 4
2011-01-20 18:10:32 PST
Committed
r76319
: <
http://trac.webkit.org/changeset/76319
>
Jessie Berlin
Comment 5
2011-01-21 08:13:33 PST
(In reply to
comment #4
)
> Committed
r76319
: <
http://trac.webkit.org/changeset/76319
>
Looks like this test has been failing on the Windows 7 Release bot since it was introduced:
http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r76319%20(8469)/fast/dom/52776-pretty-diff.html
I will be landing these results as expected results for Windows 7. Are these results correct, or should I also file a bug?
Jessie Berlin
Comment 6
2011-01-21 08:39:32 PST
Landed the Windows expected results in
http://trac.webkit.org/changeset/76349
Xiaomei Ji
Comment 7
2011-01-21 10:33:46 PST
(In reply to
comment #6
)
> Landed the Windows expected results in
http://trac.webkit.org/changeset/76349
Thanks for rebaseline win7 results! The results looks correct. The most important part is the Success message printed at the end of the file. Others I guess are platform difference.
Jessie Berlin
Comment 8
2011-02-11 09:44:26 PST
(In reply to
comment #7
)
> (In reply to
comment #6
) > > Landed the Windows expected results in
http://trac.webkit.org/changeset/76349
> > Thanks for rebaseline win7 results! > The results looks correct. The most important part is the Success message printed at the end of the file. > Others I guess are platform difference.
Looks like Windows XP also needs platform-specific results:
http://build.webkit.org/results/Windows%20XP%20Debug%20(Tests)/r78339%20(25164)/fast/dom/52776-pretty-diff.html
I am going to land these results to get the bots green. Do they look correct? (it appears that the Success message is at the end of the file since that does not show up in the diff).
Jessie Berlin
Comment 9
2011-02-11 10:02:55 PST
Added the Windows-XP results in
http://trac.webkit.org/changeset/78344
Xiaomei Ji
Comment 10
2011-02-11 10:45:49 PST
(In reply to
comment #9
)
> Added the Windows-XP results in
http://trac.webkit.org/changeset/78344
Thanks again for rebaseline! Sorry that I missed it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug