2011-01-20  Xiaomei Ji  <xji@chromium.org>

Reviewed by Dan Bernstein.

        Fix regression(r71566): PDF in RTL block might messes up text directionality.
        https://bugs.webkit.org/show_bug.cgi?id=52776

        Test: fast/dom/52776.html

        * platform/text/BidiResolver.h:
        (WebCore::::checkDirectionInLowerRaiseEmbeddingLevel):
        (WebCore::::lowerExplicitEmbeddingLevel):
        (WebCore::::raiseExplicitEmbeddingLevel):
        (WebCore::::createBidiRunsForLine):
2011-01-20  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Dan Bernstein.

        Fix regression(r71566): PDF in RTL block might messes up text directionality.
        https://bugs.webkit.org/show_bug.cgi?id=52776

        * fast/dom/52776.html: Added.
        * platform/mac/fast/dom/52776-expected.checksum: Added.
        * platform/mac/fast/dom/52776-expected.png: Added.
        * platform/mac/fast/dom/52776-expected.txt: Added.


Canonical link: https://commits.webkit.org/66554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76319 268f45cc-cd09-0410-ab3c-d52691b4dbfc